:thought_balloon: 画像のパスがおかしかった

--- a/benri/index.html
+++ b/benri/index.html
@@ -6,8 +6,8 @@
     <meta content=なにもしたくない夜は、セブンイレブンでパスタを買って帰る。レジへ持っていくと、店員さんはレジの下の引き出しからプラスチックのフォークを取り出して、袋に入れてくれる。わたしは、このフォークを使わない。ペラペラだし、口にプラスチックが触れると、気持ちまで使い捨ててしまいそうになるから。セブンイレブンのパスタは、箸で食べる。だから、わたしの部屋の引き出しには、なにもしたくなかった夜の数だけ、プラスチックのフォークが増えていく。 name=description>
     <title>近くて便利</title>
     <link href=https://poem.shikakun.com/benri/ rel=canonical>
-    <link href=favicon.ico rel=icon type=image/x-icon>
-    <link href=apple-touch-icon.png rel=apple-touch-icon-precomposed>
+    <link href=../favicon.ico rel=icon type=image/x-icon>
+    <link href=../apple-touch-icon.png rel=apple-touch-icon-precomposed>
     <meta content=近くて便利 property=og:title>
     <meta content=website property=og:type>
     <meta content=https://poem.shikakun.com/benri/ property=og:url>
