:thought_balloon: 写真のせた

--- a/benri/index.html
+++ b/benri/index.html
@@ -172,26 +172,28 @@
         background-color: var(--color-blue-grey);
       }
 
-      .contents {
+      .benri {
         padding: 1.6rem;
       }
       @media (min-width: 768px) {
-        .contents {
+        .benri {
           padding: 2.4rem;
         }
       }
       @media (min-width: 992px) {
-        .contents {
+        .benri {
           padding: 4.8rem;
         }
       }
 
       header {
-        margin-bottom: 3.2rem;
+        padding-top: 12.8rem;
+        margin-bottom: 12.8rem;
       }
       @media (min-width: 768px) {
         header {
-          margin-bottom: 4.8rem;
+          padding-top: 0;
+          margin-bottom: 11.2rem;
         }
       }
       @media (min-width: 992px) {
@@ -206,6 +208,7 @@
 
       p {
         max-width: 80rem;
+        margin: 0 auto 0 0;
         font-size: 1.6rem;
         line-height: 2;
       }
@@ -225,23 +228,83 @@
       p:nth-child(3n) {
         color: var(--color-red);
       }
+
+      footer p {
+        color: var(--color-blue-grey) !important;
+      }
+
+      .installation-view {
+        max-width: 80rem;
+        margin: 12.8rem auto 0 0;
+      }
+
+      figure + figure {
+        margin-top: 1.6rem;
+      }
+      @media (min-width: 768px) {
+        figure + figure {
+          margin-top: 2.4rem;
+        }
+      }
+      @media (min-width: 992px) {
+        figure + figure {
+          margin-top: 4.8rem;
+        }
+      }
+
+      img {
+        display: block;
+        width: 100%;
+      }
+
+      footer {
+        margin-top: 12.8rem;
+        font-size: 1.6rem;
+      }
+      @media (min-width: 768px) {
+        footer {
+          margin-top: 11.2rem;
+        }
+      }
+      @media (min-width: 992px) {
+        footer {
+          margin-top: 9.6rem;
+        }
+      }
     </style>
   </head>
   <body>
-    <div class=contents>
+    <div class="benri">
       <header>
         <h1>近くて便利</h1>
       </header>
-      <main>
-        <p>なにもしたくない夜は、セブンイレブンでパスタを買って帰る。レジへ持っていくと、店員さんはレジの下の引き出しからプラスチックのフォークを取り出して、袋に入れてくれる。わたしは、このフォークを使わない。ペラペラだし、口にプラスチックが触れると、気持ちまで使い捨ててしまいそうになるから。セブンイレブンのパスタは、箸で食べる。だから、わたしの部屋の引き出しには、なにもしたくなかった夜の数だけ、プラスチックのフォークが増えていく。</p>
-        <p>まっくらな夜道を歩いていてもセブンイレブンのからあげ棒の串を持ってるから怖くない。キンキンに冷えた夜道を歩きながらセブンイレブンの骨つきフライドチキンにむしゃぶりついているときは生きてるって感じがする。セブンイレブンのこく旨ドレッシングのグリーンサラダについてくるドレッシングだけの販売を求める署名活動があったら署名したいくらいおいしい。セブンイレブンに飽きてファミマのサンドイッチを食べたらパンに耳がついていて感動してる。</p>
-        <p>セブンイレブンでメロンパンを買おうとしたら、店員さんが無言でダッシュして新しいメロンパンを持ってきてくれたので泣きそうになった。日曜日はそれだけで日曜日ではなくて、たとえばセブンイレブンに行かないとか、日曜日から平日を取り除く努力が必要。これまで100杯ぐらい食べたセブンイレブンの牛丼に新発売のシールが貼ってある。セブンイレブンで、店員さんが「前のバイトはファミマだったんで使い方わからないです」「どこでも同じだろ」と話していた。</p>
-        <p>冷静に考えたらこの2日間の食事ぜんぶセブンイレブンだ。なにもかもふたしかなこの世界であんことマーガリンが入ったセブンイレブンのコッペパンだけがたしかに1個502キロカロリーだ。食事というより、この世界の仕組みを確認するためにセブンイレブンの牛丼を食べている。いつも利用してるセブンイレブンとは駅の反対側にあるセブンイレブンに行ったら、いつものセブンイレブンの店員さんが働いていた。この街にはセブンイレブンが2軒、ファミマが2軒、百円ローソンが2軒ある。</p>
-        <p>セブンイレブンでおにぎり2個を買ったらハリーポッターのタオルをもらってしまい、おにぎり2個とハリーポッターのタオルの関係が遠すぎてレジで爆笑してしまった。僕なんかがセブンイレブンで700円以上お買い物してしまったばかりに1リットルのポカリスエットが当たって店員さんに「お荷物になってすみません」と言わせてしまい、すみませんでした。あした起きたらセブンイレブンの2枚で125円もする食パンを食べることしか楽しみがない。セブンイレブンの味しみ大根が悲しみ大根に見えた。</p>
-        <p>一生のうちに食べられるカツの数が決まっているとして、セブンイレブンのカツ丼のカツはカウントに含まれるのか気になる。10年後にはなくなってしまうような知識で稼いだお金でセブンイレブンのカツ丼を買って食べてる。セブンイレブンの金のハンバーグを食べたことがありますか。あのデミグラスソースが、おいしすぎて怖くなる。セブンアンドアイ・ホールディングスが人間の味覚をハッキングして、わたしの感情が操作されているような気がする。</p>
-        <p>ぜんぜん別の場所にあるものが、重なって見える。いま起こっていることが、いつか体験したことのように感じられる。速すぎてよく見えないけど、出会った瞬間に別れている。それを繰り返している。からだの輪郭が高速に振動して、中と外が入れ替わっている。なんども死んでは、生まれ変わっている。それはそれとして、わたしたちはきょうも暮らしていかないとならないから、便宜上こんなことをセブンイレブンと呼んでやりすごしているわけなのだが。</p>
-        <p>ことばは、ことばだけでは手がかりがないから、それに近いことばへ言い換えたり、ことばが指す意味を定義したりして、そうすることがもとのことばへどれだけ近づいたのか、または遠くなったのか、そういう差分を手がかりにすることがある。ことばのイメージは液体で、たしかに存在するけど形はよくわからない。液体をAの容器からBの容器へ移し替えるみたいな作業のことが、詩を書くことなのではないかと思う。意味を伝える機能として書かれるわけではなく、差分を手がかりに世界へ近づいていくためにあることば。</p>
-      </main>
+      <p>なにもしたくない夜は、セブンイレブンでパスタを買って帰る。レジへ持っていくと、店員さんはレジの下の引き出しからプラスチックのフォークを取り出して、袋に入れてくれる。わたしは、このフォークを使わない。ペラペラだし、口にプラスチックが触れると、気持ちまで使い捨ててしまいそうになるから。セブンイレブンのパスタは、箸で食べる。だから、わたしの部屋の引き出しには、なにもしたくなかった夜の数だけ、プラスチックのフォークが増えていく。</p>
+      <p>まっくらな夜道を歩いていてもセブンイレブンのからあげ棒の串を持ってるから怖くない。キンキンに冷えた夜道を歩きながらセブンイレブンの骨つきフライドチキンにむしゃぶりついているときは生きてるって感じがする。セブンイレブンのこく旨ドレッシングのグリーンサラダについてくるドレッシングだけの販売を求める署名活動があったら署名したいくらいおいしい。セブンイレブンに飽きてファミマのサンドイッチを食べたらパンに耳がついていて感動してる。</p>
+      <p>セブンイレブンでメロンパンを買おうとしたら、店員さんが無言でダッシュして新しいメロンパンを持ってきてくれたので泣きそうになった。日曜日はそれだけで日曜日ではなくて、たとえばセブンイレブンに行かないとか、日曜日から平日を取り除く努力が必要。これまで100杯ぐらい食べたセブンイレブンの牛丼に新発売のシールが貼ってある。セブンイレブンで、店員さんが「前のバイトはファミマだったんで使い方わからないです」「どこでも同じだろ」と話していた。</p>
+      <p>冷静に考えたらこの2日間の食事ぜんぶセブンイレブンだ。なにもかもふたしかなこの世界であんことマーガリンが入ったセブンイレブンのコッペパンだけがたしかに1個502キロカロリーだ。食事というより、この世界の仕組みを確認するためにセブンイレブンの牛丼を食べている。いつも利用してるセブンイレブンとは駅の反対側にあるセブンイレブンに行ったら、いつものセブンイレブンの店員さんが働いていた。この街にはセブンイレブンが2軒、ファミマが2軒、百円ローソンが2軒ある。</p>
+      <p>セブンイレブンでおにぎり2個を買ったらハリーポッターのタオルをもらってしまい、おにぎり2個とハリーポッターのタオルの関係が遠すぎてレジで爆笑してしまった。僕なんかがセブンイレブンで700円以上お買い物してしまったばかりに1リットルのポカリスエットが当たって店員さんに「お荷物になってすみません」と言わせてしまい、すみませんでした。あした起きたらセブンイレブンの2枚で125円もする食パンを食べることしか楽しみがない。セブンイレブンの味しみ大根が悲しみ大根に見えた。</p>
+      <p>一生のうちに食べられるカツの数が決まっているとして、セブンイレブンのカツ丼のカツはカウントに含まれるのか気になる。10年後にはなくなってしまうような知識で稼いだお金でセブンイレブンのカツ丼を買って食べてる。セブンイレブンの金のハンバーグを食べたことがありますか。あのデミグラスソースが、おいしすぎて怖くなる。セブンアンドアイ・ホールディングスが人間の味覚をハッキングして、わたしの感情が操作されているような気がする。</p>
+      <p>ぜんぜん別の場所にあるものが、重なって見える。いま起こっていることが、いつか体験したことのように感じられる。速すぎてよく見えないけど、出会った瞬間に別れている。それを繰り返している。からだの輪郭が高速に振動して、中と外が入れ替わっている。なんども死んでは、生まれ変わっている。それはそれとして、わたしたちはきょうも暮らしていかないとならないから、便宜上こんなことをセブンイレブンと呼んでやりすごしているわけなのだが。</p>
+      <p>ことばは、ことばだけでは手がかりがないから、それに近いことばへ言い換えたり、ことばが指す意味を定義したりして、そうすることがもとのことばへどれだけ近づいたのか、または遠くなったのか、そういう差分を手がかりにすることがある。ことばのイメージは液体で、たしかに存在するけど形はよくわからない。液体をAの容器からBの容器へ移し替えるみたいな作業のことが、詩を書くことなのではないかと思う。意味を伝える機能として書かれるわけではなく、差分を手がかりに世界へ近づいていくためにあることば。</p>
+      <div class="installation-view">
+        <figure>
+          <img src="installation-view-a.jpg" alt="">
+        </figure>
+        <figure>
+          <img src="installation-view-b.jpg" alt="">
+        </figure>
+        <figure>
+          <img src="installation-view-c.jpg" alt="">
+        </figure>
+        <figure>
+          <img src="installation-view-d.jpg" alt="">
+        </figure>
+      </div>
+      <footer>
+        <p>
+          この詩は、2018年3月2日に鹿が働いている会社の壁に貼って発表されました。
+        </p>
+      </footer>
     </div>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-20528252-19"></script>
     <script>
