:thought_balloon: og:image つけた

--- a/benri/index.html
+++ b/benri/index.html
@@ -11,7 +11,7 @@
     <meta content=近くて便利 property=og:title>
     <meta content=website property=og:type>
     <meta content=https://poem.shikakun.com/benri/ property=og:url>
-    <meta content=https://poem.shikakun.com/og-image.jpg property=og:image>
+    <meta content=https://poem.shikakun.com/benri/og-image.jpg property=og:image>
     <meta content=なにもしたくない夜は、セブンイレブンでパスタを買って帰る。レジへ持っていくと、店員さんはレジの下の引き出しからプラスチックのフォークを取り出して、袋に入れてくれる。わたしは、このフォークを使わない。ペラペラだし、口にプラスチックが触れると、気持ちまで使い捨ててしまいそうになるから。セブンイレブンのパスタは、箸で食べる。だから、わたしの部屋の引き出しには、なにもしたくなかった夜の数だけ、プラスチックのフォークが増えていく。 property=og:description>
     <meta content=1612358929094852 property=fb:app_id>
     <meta content=sumarry name=twitter:card>
