:thought_balloon: photo by mayoto

--- a/benri/index.html
+++ b/benri/index.html
@@ -257,6 +257,15 @@
         width: 100%;
       }
 
+      .photo-by-mayoto {
+        width: 180px;
+      }
+      @media (min-width: 992px) {
+        .photo-by-mayoto {
+          width: 360px;
+        }
+      }
+
       footer {
         margin-top: 12.8rem;
         font-size: 1.6rem;
@@ -298,6 +307,9 @@
         </figure>
         <figure>
           <img src="installation-view-d.jpg" alt="">
+        </figure>
+        <figure>
+          <img class="photo-by-mayoto" src="installation-view-e.jpg" alt="">
         </figure>
       </div>
       <footer>
