:thought_balloon: twitter:image 変更もれてた

--- a/benri/index.html
+++ b/benri/index.html
@@ -18,7 +18,7 @@
     <meta content=@shikakun name=twitter:site>
     <meta content=近くて便利 name=twitter:title>
     <meta content=なにもしたくない夜は、セブンイレブンでパスタを買って帰る。レジへ持っていくと、店員さんはレジの下の引き出しからプラスチックのフォークを取り出して、袋に入れてくれる。わたしは、このフォークを使わない。ペラペラだし、口にプラスチックが触れると、気持ちまで使い捨ててしまいそうになるから。セブンイレブンのパスタは、箸で食べる。だから、わたしの部屋の引き出しには、なにもしたくなかった夜の数だけ、プラスチックのフォークが増えていく。 name=twitter:description>
-    <meta content=https://poem.shikakun.com/og-image.jpg name=twitter:image>
+    <meta content=https://poem.shikakun.com/benri/og-image.jpg name=twitter:image>
     <link href=../node_modules/normalize.css/normalize.css rel=stylesheet>
     <style>
       @font-face {
