:thought_balloon: 昼休みの詩のページをつくった

--- a/lunch/index.html
+++ b/lunch/index.html
@@ -3,7 +3,7 @@
   <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
     <meta charset=utf-8>
     <meta content="width=device-width" name=viewport>
-    <meta content=なにもしたくない夜は、セブンイレブンでパスタを買って帰る。レジへ持っていくと、店員さんはレジの下の引き出しからプラスチックのフォークを取り出して、袋に入れてくれる。わたしは、このフォークを使わない。ペラペラだし、口にプラスチックが触れると、気持ちまで使い捨ててしまいそうになるから。セブンイレブンのパスタは、箸で食べる。だから、わたしの部屋の引き出しには、なにもしたくなかった夜の数だけ、プラスチックのフォークが増えていく。 name=description>
+    <meta content=かつて、わたしは学生だった。学生のわたしは、自分が就職するなんて、考えられなかった。それは、働きたくないとかそういう反骨的な気持ちではなく、無理だと思っていた。面接に行くのが怖くてアルバイトもしたことがなかったし、八王子の山奥の大学で好きなことだけやってボーッとしていた自分みたいなやつが、職業に就くための必要な技能を持っているとは思えなかった。車の免許もないし。 name=description>
     <title>昼休みの詩</title>
     <link href=https://poem.shikakun.com/lunch/ rel=canonical>
     <link href=../favicon.ico rel=icon type=image/x-icon>
@@ -12,12 +12,12 @@
     <meta content=website property=og:type>
     <meta content=https://poem.shikakun.com/lunch/ property=og:url>
     <meta content=https://poem.shikakun.com/lunch/og-image.jpg property=og:image>
-    <meta content=なにもしたくない夜は、セブンイレブンでパスタを買って帰る。レジへ持っていくと、店員さんはレジの下の引き出しからプラスチックのフォークを取り出して、袋に入れてくれる。わたしは、このフォークを使わない。ペラペラだし、口にプラスチックが触れると、気持ちまで使い捨ててしまいそうになるから。セブンイレブンのパスタは、箸で食べる。だから、わたしの部屋の引き出しには、なにもしたくなかった夜の数だけ、プラスチックのフォークが増えていく。 property=og:description>
+    <meta content=かつて、わたしは学生だった。学生のわたしは、自分が就職するなんて、考えられなかった。それは、働きたくないとかそういう反骨的な気持ちではなく、無理だと思っていた。面接に行くのが怖くてアルバイトもしたことがなかったし、八王子の山奥の大学で好きなことだけやってボーッとしていた自分みたいなやつが、職業に就くための必要な技能を持っているとは思えなかった。車の免許もないし。 property=og:description>
     <meta content=1612358929094852 property=fb:app_id>
     <meta content=sumarry name=twitter:card>
     <meta content=@shikakun name=twitter:site>
     <meta content=昼休みの詩 name=twitter:title>
-    <meta content=なにもしたくない夜は、セブンイレブンでパスタを買って帰る。レジへ持っていくと、店員さんはレジの下の引き出しからプラスチックのフォークを取り出して、袋に入れてくれる。わたしは、このフォークを使わない。ペラペラだし、口にプラスチックが触れると、気持ちまで使い捨ててしまいそうになるから。セブンイレブンのパスタは、箸で食べる。だから、わたしの部屋の引き出しには、なにもしたくなかった夜の数だけ、プラスチックのフォークが増えていく。 name=twitter:description>
+    <meta content=かつて、わたしは学生だった。学生のわたしは、自分が就職するなんて、考えられなかった。それは、働きたくないとかそういう反骨的な気持ちではなく、無理だと思っていた。面接に行くのが怖くてアルバイトもしたことがなかったし、八王子の山奥の大学で好きなことだけやってボーッとしていた自分みたいなやつが、職業に就くための必要な技能を持っているとは思えなかった。車の免許もないし。 name=twitter:description>
     <meta content=https://poem.shikakun.com/lunch/og-image.jpg name=twitter:image>
     <link href=../node_modules/normalize.css/normalize.css rel=stylesheet>
     <style>
@@ -70,30 +70,12 @@
               local('Arial Bold');
       }
 
-      @font-face {
-        font-family: 'ShikaHiragino';
-        font-weight: 400;
-        src:  local('Hiragino Sans'),
-              local('ヒラギノ角ゴ ProN W3'),
-              local('Hiragino Kaku Gothic ProN');
-      }
-
-      @font-face {
-        font-family: 'ShikaHiragino';
-        font-weight: 700;
-        src:  local('Hiragino Sans'),
-              local('ヒラギノ角ゴ ProN W6'),
-              local('Hiragino Kaku Gothic ProN W6');
-      }
-
       :root {
         --color-white: #fff;
-        --color-blue-grey: #607d8b;
-        --color-orange: #ff6600;
-        --color-green: #008738;
-        --color-red: #fe0000;
+        --color-black: #263238;
+        --color-grey: #607d8b;
 
-        font-family: 'YakuHanJP', 'ShikaSystem', 'ShikaSansSerif', 'ShikaHiragino', 'メイリオ', Meiryo, Osaka, 'MS UI Gothic', 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
+        font-family: 'YakuHanJP', 'ShikaSystem', 'ShikaSansSerif', 'Hiragino Sans', 'メイリオ', Meiryo, Osaka, 'MS UI Gothic', 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
         text-rendering: optimizeLegibility;
         font-feature-settings: 'palt' 1;
         -webkit-font-smoothing: antialiased;
@@ -160,66 +142,65 @@
       }
 
       body {
-        color: var(--color-blue-grey);
+        color: var(--color-black);
+        font-weight: 700;
       }
 
       a {
-        color: var(--color-blue-grey);
+        color: var(--color-black);
       }
 
       ::selection {
         color: var(--color-white);
-        background-color: var(--color-blue-grey);
+        background-color: var(--color-black);
       }
 
       .lunch {
-        padding: 1.6rem;
-      }
-      @media (min-width: 768px) {
-        .lunch {
-          padding: 2.4rem;
-        }
-      }
-      @media (min-width: 992px) {
-        .lunch {
-          padding: 4.8rem;
-        }
+        padding: 0 1.6rem;
       }
 
       header {
-        padding-top: 12.8rem;
-        margin-bottom: 12.8rem;
+        padding: 16rem 0;
       }
       @media (min-width: 768px) {
         header {
-          padding-top: 0;
-          margin-bottom: 11.2rem;
-        }
-      }
-      @media (min-width: 992px) {
-        header {
-          margin-bottom: 9.6rem;
+          padding-top: 24rem;
+          padding-bottom: 24rem;
         }
       }
 
       h1 {
+        text-align: center;
         font-size: 1.6rem;
+        font-weight: inherit;
       }
 
       p {
-        max-width: 80rem;
-        margin: 0 auto 0 0;
+        max-width: 60rem;
+        margin: 0 auto;
+        text-align: justify;
         font-size: 1.6rem;
         line-height: 2;
+        word-wrap : break-word;
+        overflow-wrap : break-word;
       }
 
       p + p {
-        margin-top: 2em;
+        margin-top: 3em;
       }
 
       .installation-view {
-        max-width: 80rem;
-        margin: 12.8rem auto 0 0;
+        max-width: 120rem;
+        margin: 16rem auto 0;
+      }
+      @media (min-width: 768px) {
+        .installation-view {
+          margin-top: 24rem;
+        }
+      }
+
+      figure {
+        margin: 0 -1.6rem;
       }
 
       figure + figure {
@@ -227,32 +208,23 @@
       }
       @media (min-width: 768px) {
         figure + figure {
-          margin-top: 2.4rem;
-        }
-      }
-      @media (min-width: 992px) {
-        figure + figure {
-          margin-top: 4.8rem;
+          margin-top: 3.2rem;
         }
       }
 
-      img {
+      figure > img {
         display: block;
         width: 100%;
       }
 
       footer {
-        margin-top: 12.8rem;
-        font-size: 1.6rem;
+        padding: 16rem 0;
+        color: var(--color-grey);
       }
       @media (min-width: 768px) {
         footer {
-          margin-top: 11.2rem;
-        }
-      }
-      @media (min-width: 992px) {
-        footer {
-          margin-top: 9.6rem;
+          padding-top: 24rem;
+          padding-bottom: 24rem;
         }
       }
     </style>
@@ -282,10 +254,7 @@
       </div>
       <footer>
         <p>
-          この詩は、2018年4月18日に鹿が働いている会社の新卒採用の会社説明会で、会場の床に置いて発表されました。
-        </p>
-        <p>
-          この詩は、同人誌「konel.mag Issue 4」に掲載された同名のテキストに加筆と修正を加えて執筆しました。 konel のみなさま、ありがとうございました。
+          この詩は、2018年4月18日に鹿が働いている会社の新卒採用の会社説明会で、会場の床に置いて発表されました。また、執筆にあたっては、<a href="http://konel-works.com/" target="_blank">konel</a>が発行する同人誌<a href="http://konel-works.com/issue4/" target="_blank">「konel.mag Issue 4」</a>に掲載された同名のテキストをもとにしました。ありがとうございました。
         </p>
       </footer>
     </div>
