:thought_balloon: インスタレーションの風景の写真をいれた

--- a/lunch/index.html
+++ b/lunch/index.html
@@ -190,7 +190,7 @@
       }
 
       .installation-view {
-        max-width: 120rem;
+        max-width: 80rem;
         margin: 16rem auto 0;
       }
       @media (min-width: 768px) {
@@ -227,6 +227,11 @@
           padding-bottom: 24rem;
         }
       }
+
+      footer > figure {
+        max-width: 32rem;
+        margin: 8rem auto 0
+      }
     </style>
   </head>
   <body>
@@ -251,11 +256,17 @@
         <figure>
           <img src="installation-view-d.jpg" alt="">
         </figure>
+        <figure>
+          <img src="installation-view-e.jpg" alt="">
+        </figure>
       </div>
       <footer>
         <p>
           この詩は、2018年4月18日に鹿が働いている会社の新卒採用の会社説明会で、会場の床に置いて発表されました。また、執筆にあたっては、<a href="http://konel-works.com/" target="_blank">konel</a>が発行する同人誌<a href="http://konel-works.com/issue4/" target="_blank">「konel.mag Issue 4」</a>に掲載された同名のテキストをもとにしました。ありがとうございました。
         </p>
+        <figure>
+          <img src="installation-view-f.jpg" alt="">
+        </figure>
       </footer>
     </div>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-20528252-19"></script>
