:thought_balloon: 写真の大きさを調整した

--- a/lunch/index.html
+++ b/lunch/index.html
@@ -229,8 +229,13 @@
       }
 
       footer > figure {
-        max-width: 32rem;
-        margin: 8rem auto 0
+        max-width: 24rem;
+        margin: 8rem auto 0;
+      }
+      @media (min-width: 768px) {
+        footer > figure {
+          max-width: 32rem;
+        }
       }
     </style>
   </head>
